--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,12 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692358496-data-engineer'>Numberly Data Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/lamudi/392cd70c-b03b-413e-b8ca-3d0b7cb1df48'>Lamudi - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://cloudacademy.workable.com/j/EF70997CAB'>Cloud Academy - Jobs: Data Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Mendrisio, Ticino, Switzerland Italy Milan</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4369946002'>Job Application for Sr. Data Engineer  at Cast & Crew Entertainment Services, LLC</a></h5> 
@@ -60,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092444-data-engineer-remote-option-'>Lingoda Data Engineer (Remote option) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092444-data-engineer-remote-option-'>Lingoda Data Engineer (Remote option) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -99,7 +103,7 @@ Assemble large?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Data Engineer at Cloud Academy.</p>
 <hr/>
-<h5><a href='https://photoboxgroup.workable.com/jobs/1087076'>ETL Data Engineer - Apply online - Photobox Group - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://photoboxgroup.workable.com/jobs/1087076'>ETL Data Engineer - Apply online - Photobox Group - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of ETL Data Engineer at Photobox Group.</p>
 <hr/>
@@ -142,11 +146,11 @@ analytic,?...</p>
 <p>Jul 15, 2019 ... FACT - Farmington, Connecticut is now hiring a Data Engineer in Farmington, 
 Connecticut. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fiscalnote/8eb2bd6f-76c8-40f8-a7e7-e3a9279df065'>FiscalNote - Director of Data Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/fiscalnote/8eb2bd6f-76c8-40f8-a7e7-e3a9279df065'>FiscalNote - Director of Data Engineering</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/keecfjo3d6kzeik6d9ffuaqqne'>Data Engineer - Automotive | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/keecfjo3d6kzeik6d9ffuaqqne'>Data Engineer - Automotive | Averity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -203,7 +207,7 @@ data delivery systems and transform it into beautiful insights, analysis, and?..
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/streetlightdata/4677d0dc-2a81-45b4-9815-72b4d33d9432'>StreetLight Data - Senior Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/streetlightdata/4677d0dc-2a81-45b4-9815-72b4d33d9432'>StreetLight Data - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -229,7 +233,7 @@ online content network for information and online operations of CBS Corporation
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solvay.avature.net/careers/JobDetail/2019-07-19/9500'>VIE - R&I data engineer - Chemoinformatics | Solvay</a></h5> 
+<h5><a href='https://solvay.avature.net/careers/JobDetail/2019-07-19/9500'>VIE - R&I data engineer - Chemoinformatics | Solvay</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... This position is in Solvay Research & Innovation Centre Brussels, in the recently 
 created Data Management Excellence Team. Within this multidisciplinary team?...</p>
@@ -461,7 +465,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/peloton/jobs/1785788'>Job Application for Director of Data Engineering at Peloton</a></h5> 
+<h5><a href='https://boards.greenhouse.io/peloton/jobs/1785788'>Job Application for Director of Data Engineering at Peloton</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -471,10 +475,6 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <hr/>
 <h5><a href='https://jobs.lever.co/mattermost/8172df4c-5d9a-44bb-b2ac-3286ef956926'>Mattermost - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
-<p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 
